tests/machine/x/hs/group_items_iteration.error

/workspace/mochi/tests/machine/x/hs/group_items_iteration.hs:167:6: error:
    parse error on input ‘=’
    |
167 | data = [Map.fromList [("tag", VString ("a")), ("val", VInt (1))], Map.fromList [("tag", VString ("a")), ("val", VInt (2))], Map.fromList [("tag", VString ("b")), ("val", VInt (3))]]
    |      ^


Context around line 167:
  165| 
  166| 
  167| data = [Map.fromList [("tag", VString ("a")), ("val", VInt (1))], Map.fromList [("tag", VString ("a")), ("val", VInt (2))], Map.fromList [("tag", VString ("b")), ("val", VInt (3))]]
  168| 
  169| groups = [ g | g <- _group_by data (\d -> fromMaybe (error "missing") (Map.lookup "tag" d)), let g = g ]
